# database-chat-assistant

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env_example.txt  pyproject.toml  requirements.txt
app/: chat_bot.py  dowload_models.ipynb  main.py  telementry.py
app/evaluators/: dataset.ipynb
app/langchainService/: adaptive_RAG.py  database_retriver.py  langchainAgent.py  langchain_rnd.ipynb  langchain_util.py  prompts.py  summarization.py
app/langchainService/summary_chain/: chains.py  summarization.py  summary_prompt.py  summary_utils.py
app/langchainService/test_nodebooks/: langchain_rnd.py
app/llamaIndex/: db_utils.py  eval_query.py  examples.py  llamaIndexAgent.py  llamaIndex_rnd.ipynb  llamaIndex_utils.py  llamaindex_sql_rnd.ipynb
app/llamaIndex/rnd/: llamaIndex_rnd.ipynb  llamaindex_sql_rnd.ipynb  test.py
app/utils/: chat_bot_utils.py  connections.py  db_info.py  models.py  settings.py  telementry.py
dockerfiles/: Dockerfile
